js/src/tests/test262/built-ins/Error/prototype/stack/getter-error-instance.js


















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

var errors = [];
for (var i = 0; i < allErrorConstructors.length; ++i) {
  var Ctor = allErrorConstructors[i];
  errors.push([Ctor.name, makeNativeError(Ctor, true), makeNativeError(Ctor, false)]);
}

for (var i = 0; i < errors.length; ++i) {
  var name = errors[i][0];
  var err = errors[i][1];
  var err2 = errors[i][2];

  assert.sameValue(typeof get.call(err), 'string', name + ': new Ctor instance via get.call');
  assert.sameValue(typeof err.stack, 'string', name + ': new Ctor instance via property access');

  assert.sameValue(typeof get.call(err2), 'string', name + ': Ctor called without new');

  assert.sameValue(typeof get.call(err), 'string', name + ': second call still returns a string');
}

reportCompare(0, 0);
